# kobaml

./: .gitignore  .travis.yml  CDef.hs  Eval.hs  EvalLazy.hs  ExprLexer.x  ExprParser.y  ExprToken.hs  Main.hs  Makefile  README.md  TypeInf.hs  TypeParse.hs  TypeParse.y  kobaml.cabal  melisma.cabal  stdlib.txt
src/: CDef.hs  Eval.hs  EvalLazy.hs  ExprLexer.x  ExprParser.y  ExprToken.hs  Main.hs  Makefile  TypeInf.hs
test/: EvalLazyTest.hs  TypeInfTest.hs
