name:                kobaml
version:             0.1.0.0
homepage:            https://github.com/koba-e964/kobaml/
synopsis:            A lightweight interpreter for a dialect of ML.
description:         A lightweight interpreter for a dialect of ML made by koba-e964.
license:             BSD3
license-file:        LICENSE
author:              koba-e964
maintainer:          Hiroki Kobayashi <silentkiddie-2014@yahoo.co.jp>
copyright:           koba-e964
category:            Language
build-type:          Simple
cabal-version:       >=1.8

source-repository this
  type:              git
  location:          https://github.com/koba-e964/kobaml.git
  tag:               0.1.0.0

executable kobaml
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4 && <5, mtl >=2.2, containers >=0.5, array >=0.4, HUnit >=1.2, transformers >=0.3, primitive >=0.5
  build-tools:         alex, happy
  other-modules:       ExprLexer, ExprParser
